Add render engine module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,14 +2,6 @@ if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
 	add_compile_options(-Wall -Wextra -Wpedantic -O0 -g)
 endif()
 
-set(PROD_TARGETS
-	"argParser"
-)
-
-set(TEST_TARGETS
-	"argParser/test"
-)
-
 if ("${BUILD_TARGETS}" STREQUAL "all")
 	set(BUILD_PROD_TARGETS 1)
 	set(BUILD_TEST_TARGETS 1)
@@ -22,8 +14,8 @@ if (BUILD_PROD_TARGETS)
 endif()
 
 if (BUILD_TEST_TARGETS)
-	foreach(module IN LISTS TEST_TARGETS)
-		add_subdirectory(${module})
+	foreach(module IN LISTS PROD_TARGETS)
+		add_subdirectory(${module}/test)
 	endforeach()
 endif()
 
