Refactor render engine module
Add window creation to render engine module
Fix segfault bug in render engine module
Refactor demo

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_executable(demo main.cpp)
+add_executable(demo
+	parseCLI.cpp
+	main.cpp
+)
 
 foreach(module IN LISTS PROD_TARGETS)
 	target_link_libraries(demo ${module})
