--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,8 @@ endif()
 
 if (BUILD_TEST_TARGETS)
 	foreach(module IN LISTS PROD_TARGETS)
-		add_subdirectory(${module}/test)
+		if (EXISTS "${module}/test")
+			add_subdirectory(${module}/test)
+		endif()
 	endforeach()
 endif()
