Refactor argument parser module
Transition to C++ modules

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -3,6 +3,11 @@ add_executable(demo
 	main.cpp
 )
 
+target_sources(demo PRIVATE FILE_SET demoParseCLIModule
+	TYPE CXX_MODULES
+	FILES parseCLI.ixx
+)
+
 foreach(module IN LISTS PROD_TARGETS)
 	target_link_libraries(demo ${module})
 endforeach()
