--- a/src/argParser/CMakeLists.txt
+++ b/src/argParser/CMakeLists.txt
@@ -1,1 +1,8 @@
 add_library(argParser argParser.cpp)
+
+target_sources(argParser PUBLIC FILE_SET argParserModule
+	TYPE CXX_MODULES
+	FILES argParser.ixx
+)
+
+include(testSplitter.cmake)
