Refactor scoped logger module
Use C++20 modules for public interface
Use private header for tests

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,11 +1,13 @@
-add_executable(demo
-	parseCLI.cpp
-	main.cpp
-)
+add_executable(demo)
 
-target_sources(demo PRIVATE FILE_SET demoParseCLIModule
-	TYPE CXX_MODULES
-	FILES parseCLI.ixx
+target_sources(demo
+	PRIVATE
+		parseCLI.cpp
+		main.cpp
+	PRIVATE
+		FILE_SET demoParseCLIModule
+		TYPE CXX_MODULES
+		FILES parseCLI.ixx
 )
 
 foreach(module IN LISTS PROD_TARGETS)
