--- a/src/scopedLogger/CMakeLists.txt
+++ b/src/scopedLogger/CMakeLists.txt
@@ -1,6 +1,12 @@
-add_library(scopedLogger scopedLogger.cpp)
+add_library(scopedLogger)
 
-target_sources(scopedLogger PUBLIC FILE_SET scopedLoggerModule
-	TYPE CXX_MODULES
-	FILES scopedLogger.ixx
+target_sources(scopedLogger
+	PRIVATE
+		private/scopedLogger.cpp
+	PUBLIC
+		scopedLogger.cpp
+	PUBLIC
+		FILE_SET scopedLoggerModule
+		TYPE CXX_MODULES
+		FILES scopedLogger.ixx
 )
