Revert usage of C++20 modules
Reason: No good way to implement PIMPL idiom
Trying to hide internal structures from clients would be a nightmare.

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -1,13 +1,6 @@
-add_executable(demo)
-
-target_sources(demo
-	PRIVATE
-		parseCLI.cpp
-		main.cpp
-	PRIVATE
-		FILE_SET demoParseCLIModule
-		TYPE CXX_MODULES
-		FILES parseCLI.ixx
+add_executable(demo
+	parseCLI.cpp
+	main.cpp
 )
 
 foreach(module IN LISTS PROD_TARGETS)
