--- a/src/argParser/CMakeLists.txt
+++ b/src/argParser/CMakeLists.txt
@@ -1,4 +1,12 @@
-add_library(argParserInternals internals.cpp)
+add_library(argParser interface.cpp internals.cpp)
+add_library(argParserLogger dummyLoggerImpl.cpp)
 
-add_library(argParser interface.cpp)
-target_link_libraries(argParser argParserInternals)
+if (USE_SCOPED_LOGGER)
+	message(STATUS "Using scoped logger for argParser")
+	list(APPEND argParserLibList scopedLogger)
+else()
+	message(STATUS "Using dummy logger for argParser")
+	list(APPEND argParserLibList argParserLogger)
+endif()
+
+target_link_libraries(argParser ${argParserLibList})
