Strip modules of logger usage.
Reason: This made the code less readable, and more complex

--- a/src/scopedLogger/CMakeLists.txt
+++ b/src/scopedLogger/CMakeLists.txt
@@ -1,4 +1,1 @@
-add_library(scopedLoggerInternals internals.cpp)
-
-add_library(scopedLogger interface.cpp)
-target_link_libraries(scopedLogger scopedLoggerInternals)
+add_library(scopedLogger interface.cpp internals.cpp)
