Refactor argument parser module
Use CYK algorithm to parse grammar
Report error type and position

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,8 @@ if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
 	add_compile_options(-Wall -Wextra -Wpedantic -O0 -g)
 endif()
 
+message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
+
 if ("${BUILD_TARGETS}" STREQUAL "all")
 	set(BUILD_PROD_TARGETS 1)
 endif()
